<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    tools:context="com.example.android.quizappfinal.Main2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Q1_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/header_question_1"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Actual_Q1"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:text="@string/actual_question_1"
            android:textColor="#000000"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/Q1_Image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/wonderland" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:orientation="vertical"
            android:textColor="#000000">

            <RadioButton
                android:id="@+id/Q1_Answer_A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/Q1A1"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="normal" />

            <RadioButton
                android:id="@+id/Q1_Answer_B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:checked="false"
                android:text="@string/Q1_Answer_B" />

            <RadioButton
                android:id="@+id/Q1_Answer_C"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:checked="false"
                android:text="@string/Q1_Answer_C" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Q2_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:text="@string/Header_question_2"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Actual_Q2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:text="@string/Actual_Question_2"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/Q2_Image"
                    android:layout_width="match_parent"
                    android:layout_height="298dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/shrek" />

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000000">

                    <RadioButton
                        android:id="@+id/Q2_Answer_A"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:checked="false"
                        android:text="@string/Q2_Answer_A" />

                    <RadioButton
                        android:id="@+id/Q2_Answer_B"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:checked="false"
                        android:text="@string/Q2_Answer_B" />

                    <RadioButton
                        android:id="@+id/Q2_Answer_C"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:checked="false"
                        android:text="@string/Q2_Answer_C" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Q3_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/Header_question_3"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Actual_Q3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="16dp"
                    android:text="@string/Actual_question_3"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/Q3_Image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/dancing" />

            </LinearLayout>

            <RadioGroup
                android:id="@+id/radioGroup3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000">

                <RadioButton
                    android:id="@+id/Q3_Answer_A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:checked="false"
                    android:text="@string/Q3_Answer_A" />

                <RadioButton
                    android:id="@+id/Q3_Answer_B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/Q3_Answer_B" />

                <RadioButton
                    android:id="@+id/Q3_Answer_C"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/Q3_Answer_C" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Q4_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/Header_Question_4"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Actual_Q4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:text="@string/Actual_Question_4"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/Q4_Image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/wars" />

            </LinearLayout>

            <RadioGroup
                android:id="@+id/radioGroup4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:textColor="#000000">

                <RadioButton
                    android:id="@+id/Q4_Answer_A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/Q4_Answer_A" />

                <RadioButton
                    android:id="@+id/Q4_Answer_B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q4_Answer_B" />

                <RadioButton
                    android:id="@+id/Q4_Answer_C"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q4_Answer_C" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Q5_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/Header_question_5"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Actual_Q5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:text="@string/Actual_Question_5"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/Q5_Image"
                    android:layout_width="312dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/dwarves" />

                <CheckBox
                    android:id="@+id/Q5_checkbox1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/Q5_Checkbox1"
                    android:textColor="#000000" />

                <CheckBox
                    android:id="@+id/Q5_checkbox2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Q5_Checkbox2"
                    android:textColor="#000000" />

                <CheckBox
                    android:id="@+id/Q5_checkbox3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Q5_Checkbox3"
                    android:textColor="#000000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Q6_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/Header_Question_6"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Actual_Q6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:text="@string/Actual_question_6"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/Q6_Image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/rings" />

            </LinearLayout>

            <RadioGroup
                android:id="@+id/radioGroup5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:textColor="#000000">

                <RadioButton
                    android:id="@+id/Q6_Answer_A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/Q6_Answer_A" />

                <RadioButton
                    android:id="@+id/Q6_Answer_B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q6_Answer_B" />

                <RadioButton
                    android:id="@+id/Q6_Answer_C"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q6_Answer_C" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Q7_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/header_question7"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Actual_Q7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:text="@string/Actual_Question7"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/Q7_Image"
                    android:layout_width="200dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/brave" />

                <EditText
                    android:id="@+id/Q7_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/Edit_text_box" />

                <Button
                    android:id="@+id/submitQuiz"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="submitQuiz"
                    android:text="@string/submit_quiz" />

                <Button
                    android:id="@+id/try_again_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="4dp"
                    android:onClick="tryAgain"
                    android:text="@string/Try_Again_Button" />

            </LinearLayout>
        </RadioGroup>
    </LinearLayout>
</ScrollView>



